# maestro-install

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  base_packages.txt  build-installer.sh  build-livecd.sh  build.sh  build_iso.sh  clean.sh  grub-installer.cfg  grub-livecd.cfg  grub.cfg  install.sh
.github/workflows/: check.yml
lang/: en.json  fr.json
src/: lang.rs  main.rs  partition.rs  util.rs
src/install/: grub.cfg  mod.rs
src/prompt/: mod.rs  motd  term.rs
