[package]
name = "maestro_install"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { git = "https://github.com/llenotre/blimp" }
fdisk = { git = "https://github.com/llenotre/maestro-utils" }
libc = "*"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
utils = { git = "https://github.com/llenotre/maestro-utils" }

[profile.release]
strip = true
