[package]
name = "maestro_install"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { git = "https://github.com/maestro-os/blimp" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.22.0", features = ["v4"] }

[profile.release]
strip = true
